# daily-ai-utils

./: .gitignore  LICENSE  README.md  people.csv  people_clean.csv  pyproject.toml
src/daily_ai_utils/: cli.py
src/daily_ai_utils.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/daily_ai_utils/data/: clean_csv.py
src/daily_ai_utils/text/: wordcount.py
