[project]
name = "daily-ai-utils"
version = "0.1.0"
description = "Swiss Army Knife for AI + Data utilities"
authors = [{ name = "Vishal Krishna Shah" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pandas"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
daily-ai-utils = "daily_ai_utils.cli:main"
